--- a/Relational/genmodel.template
+++ b/Relational/genmodel.template
@@ -27,7 +27,7 @@ final class MODEL_NAME: Model, CustomStringConvertible {
     
     var FIELD_NAME: FIELD_TYPE
     
-    var TO_MANY_FIELD_NAME: ModelToManyRelation<TO_MANY_FIELD_TYPE> { return try! owningDatabase.fetch(TO_MANY_FIELD_TYPE.self, ownedBy: self) }
+    var TO_MANY_FIELD_NAME: ModelToManyRelation<TO_MANY_FIELD_TYPE> { return owningDatabase.fetch(TO_MANY_FIELD_TYPE.self, ownedBy: self) }
     
     init(
         owningDatabase: ModelDatabase,
