Get model generation working in the test target. Make some more stuff in the library public.

--- a/Relational/genmodel.template
+++ b/Relational/genmodel.template
@@ -9,6 +9,8 @@
 // To add additional functionality to these types, create
 // an extension in another file.
 
+import libRelational
+
 final class MODEL_NAME: Model, CustomStringConvertible {
     static let name = "MODEL_NAME"
     
