--- a/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelationalBinding.xcscheme
+++ b/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelationalBinding.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "372707AD1CFE238700710C80"
-               BuildableName = "libBinding.dylib"
-               BlueprintName = "Binding"
+               BuildableName = "libPLRelationalBinding.dylib"
+               BlueprintName = "PLRelationalBinding"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "372707CA1CFE25AF00710C80"
-               BuildableName = "BindingTests.xctest"
-               BlueprintName = "BindingTests"
+               BuildableName = "PLRelationalBindingTests.xctest"
+               BlueprintName = "PLRelationalBindingTests"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,8 +43,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libBinding.dylib"
-            BlueprintName = "Binding"
+            BuildableName = "libPLRelationalBinding.dylib"
+            BlueprintName = "PLRelationalBinding"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,8 +65,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libBinding.dylib"
-            BlueprintName = "Binding"
+            BuildableName = "libPLRelationalBinding.dylib"
+            BlueprintName = "PLRelationalBinding"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,8 +83,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libBinding.dylib"
-            BlueprintName = "Binding"
+            BuildableName = "libPLRelationalBinding.dylib"
+            BlueprintName = "PLRelationalBinding"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
