--- a/Examples/Visualizer/Info.plist
+++ b/Examples/Visualizer/Info.plist
@@ -44,7 +44,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 mikeash. All rights reserved.</string>
+	<string>Copyright © 2016 Plausible Labs Cooperative, Inc. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
