--- a/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelational-macOS.xcscheme
+++ b/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelational-macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "372707AD1CFE238700710C80"
-               BuildableName = "libPLRelationalBinding.dylib"
-               BlueprintName = "PLRelationalBinding"
+               BlueprintIdentifier = "37B43FF91E8997EB00C8C336"
+               BuildableName = "PLRelational.framework"
+               BlueprintName = "PLRelational-macOS"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "372707CA1CFE25AF00710C80"
-               BuildableName = "PLRelationalBindingTests.xctest"
-               BlueprintName = "PLRelationalBindingTests"
+               BlueprintIdentifier = "37B440011E8997EB00C8C336"
+               BuildableName = "PLRelationalTests.xctest"
+               BlueprintName = "PLRelational-macOSTests"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libPLRelationalBinding.dylib"
-            BlueprintName = "PLRelationalBinding"
+            BlueprintIdentifier = "37B43FF91E8997EB00C8C336"
+            BuildableName = "PLRelational.framework"
+            BlueprintName = "PLRelational-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libPLRelationalBinding.dylib"
-            BlueprintName = "PLRelationalBinding"
+            BlueprintIdentifier = "37B43FF91E8997EB00C8C336"
+            BuildableName = "PLRelational.framework"
+            BlueprintName = "PLRelational-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,9 +82,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "372707AD1CFE238700710C80"
-            BuildableName = "libPLRelationalBinding.dylib"
-            BlueprintName = "PLRelationalBinding"
+            BlueprintIdentifier = "37B43FF91E8997EB00C8C336"
+            BuildableName = "PLRelational.framework"
+            BlueprintName = "PLRelational-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
