--- a/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelationalBinding-macOS.xcscheme
+++ b/PLRelational.xcodeproj/xcshareddata/xcschemes/PLRelationalBinding-macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C22921BA1CD12A7100518184"
-               BuildableName = "libPLRelational.dylib"
-               BlueprintName = "PLRelational"
+               BlueprintIdentifier = "37B440D21E899F7600C8C336"
+               BuildableName = "PLRelationalBinding.framework"
+               BlueprintName = "PLRelationalBinding-macOS"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C22921E41CD12CF100518184"
-               BuildableName = "PLRelationalTests.xctest"
-               BlueprintName = "PLRelationalTests"
+               BlueprintIdentifier = "37B440DA1E899F7600C8C336"
+               BuildableName = "PLRelationalBindingTests.xctest"
+               BlueprintName = "PLRelationalBinding-macOSTests"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +42,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C22921BA1CD12A7100518184"
-            BuildableName = "libPLRelational.dylib"
-            BlueprintName = "PLRelational"
+            BlueprintIdentifier = "37B440D21E899F7600C8C336"
+            BuildableName = "PLRelationalBinding.framework"
+            BlueprintName = "PLRelationalBinding-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C22921BA1CD12A7100518184"
-            BuildableName = "libPLRelational.dylib"
-            BlueprintName = "PLRelational"
+            BlueprintIdentifier = "37B440D21E899F7600C8C336"
+            BuildableName = "PLRelationalBinding.framework"
+            BlueprintName = "PLRelationalBinding-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,9 +82,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "C22921BA1CD12A7100518184"
-            BuildableName = "libPLRelational.dylib"
-            BlueprintName = "PLRelational"
+            BlueprintIdentifier = "37B440D21E899F7600C8C336"
+            BuildableName = "PLRelationalBinding.framework"
+            BlueprintName = "PLRelationalBinding-macOS"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
