--- a/PLRelational.xcodeproj/xcshareddata/xcschemes/TodoApp-SwiftUI.xcscheme
+++ b/PLRelational.xcodeproj/xcshareddata/xcschemes/TodoApp-SwiftUI.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3709DDA9235A346E009F794B"
-               BuildableName = "TodoSwiftUIApp.app"
-               BlueprintName = "TodoSwiftUIApp"
+               BuildableName = "TodoApp-SwiftUI.app"
+               BlueprintName = "TodoApp-SwiftUI"
                ReferencedContainer = "container:PLRelational.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3709DDA9235A346E009F794B"
-            BuildableName = "TodoSwiftUIApp.app"
-            BlueprintName = "TodoSwiftUIApp"
+            BuildableName = "TodoApp-SwiftUI.app"
+            BlueprintName = "TodoApp-SwiftUI"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -74,8 +74,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3709DDA9235A346E009F794B"
-            BuildableName = "TodoSwiftUIApp.app"
-            BlueprintName = "TodoSwiftUIApp"
+            BuildableName = "TodoApp-SwiftUI.app"
+            BlueprintName = "TodoApp-SwiftUI"
             ReferencedContainer = "container:PLRelational.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
