--- a/Examples/PLRelationalExamples.xcodeproj/xcshareddata/xcschemes/TodoApp-SwiftUI-macOS.xcscheme
+++ b/Examples/PLRelationalExamples.xcodeproj/xcshareddata/xcschemes/TodoApp-SwiftUI-macOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "37F125072383505000C9D006"
-               BuildableName = "PLRelationalCombine.framework"
-               BlueprintName = "PLRelationalCombine-iOS"
-               ReferencedContainer = "container:PLRelational.xcodeproj">
+               BlueprintIdentifier = "37F1245A23834A2400C9D006"
+               BuildableName = "TodoApp-SwiftUI-macOS.app"
+               BlueprintName = "TodoApp-SwiftUI-macOS"
+               ReferencedContainer = "container:PLRelationalExamples.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "37F1252C238350D700C9D006"
-               BuildableName = "PLRelationalCombine-iOSTests.xctest"
-               BlueprintName = "PLRelationalCombine-iOSTests"
-               ReferencedContainer = "container:PLRelational.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "37F1245A23834A2400C9D006"
+            BuildableName = "TodoApp-SwiftUI-macOS.app"
+            BlueprintName = "TodoApp-SwiftUI-macOS"
+            ReferencedContainer = "container:PLRelationalExamples.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "37F125072383505000C9D006"
-            BuildableName = "PLRelationalCombine.framework"
-            BlueprintName = "PLRelationalCombine-iOS"
-            ReferencedContainer = "container:PLRelational.xcodeproj">
+            BlueprintIdentifier = "37F1245A23834A2400C9D006"
+            BuildableName = "TodoApp-SwiftUI-macOS.app"
+            BlueprintName = "TodoApp-SwiftUI-macOS"
+            ReferencedContainer = "container:PLRelationalExamples.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
