--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,10 +31,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
       - name: Select Xcode 11.1
         run: sudo xcode-select -switch /Applications/Xcode_11.1.app
-      - name: Build and Test
+
+      - name: Build + Test: PLRelational
+        run: |
+          cd PLRelational
+          xcodebuild clean test -scheme PLRelational-${{ matrix.name }} -destination "${{ matrix.destination }}" | xcpretty
+
+      - name: Build + Test: PLRelationalCombine
         run: |
           cd PLRelationalCombine
-          xcodebuild clean test -scheme PLRelational-${{ matrix.name }} -destination "${{ matrix.destination }}"
-          xcodebuild clean test -scheme PLRelationalCombine-${{ matrix.name }} -destination "${{ matrix.destination }}"
+          xcodebuild clean test -scheme PLRelationalCombine-${{ matrix.name }} -destination "${{ matrix.destination }}" | xcpretty
+
+      - name: Build: TodoApp-SwiftUI
+        run: |
+          cd Examples
+          xcodebuild clean build -scheme TodoApp-SwiftUI-${{ matrix.name }} -destination "${{ matrix.destination }}" | xcpretty
+
+      - name: Build + Test: PLRelationalBinding (Legacy)
+        run: |
+          cd Legacy
+          xcodebuild clean test -scheme PLRelationalBinding-${{ matrix.name }} -destination "${{ matrix.destination }}" | xcpretty
