Rename workflow, make it (theoretically) work for merges to master, and attempt to add badge to README.

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,6 +1,13 @@
-name: Pull Request
+name: Build
 
-on: pull_request
+# Run this on pushes to `master`, or when a pull request is opened against `master`
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   test:
